# rusidian

./: .gitignore  AGENTS.md  BULK_INGESTION.md  BULK_INGESTION_EXAMPLE.md  BULK_INGESTION_RATE_LIMITED.md  CANVAS_FEATURE_SUMMARY.txt  Cargo.toml  IMPLEMENTATION_SUMMARY.md  POLISH-PASS-P2-P3.md  POLISH-PASS-SUMMARY.md  PRIORITY-2-3-IMPLEMENTATION.md  README.md  RICH-BLOCKS-IMPLEMENTATION.md  SCHEMA.md  STATUS.md
.claude/: launch.json
crates/pkm-agent/: Cargo.toml
crates/pkm-agent/src/: lib.rs
crates/pkm-app/: Cargo.toml  tauri.conf.json
crates/pkm-app/frontend/: index.html
crates/pkm-app/src/: commands.rs  db_pool.rs  graph.rs  ingestion.rs  lib.rs  service.rs  watcher.rs
crates/pkm-core/: Cargo.toml
crates/pkm-core/src/: agent_action.rs  block.rs  entity.rs  error.rs  fixtures.rs  id.rs  ingestion.rs  json_patch.rs  lib.rs  link.rs  markdown.rs  media.rs  note.rs  ports.rs  provenance.rs  review.rs  source.rs  sync.rs  view.rs
crates/pkm-fs/: Cargo.toml
crates/pkm-fs/src/: blob_store.rs  lib.rs  retriever.rs  state.rs
crates/pkm-fs/src/repositories/: agent_actions.rs  entities.rs  links.rs  mod.rs  notes.rs  sources.rs  views.rs
crates/pkm-ingestion/: Cargo.toml
crates/pkm-ingestion/src/: lib.rs
crates/pkm-search/: Cargo.toml
crates/pkm-search/src/: lib.rs
crates/pkm-storage/: Cargo.toml
crates/pkm-storage/migrations/: 0001_init.sql  0002_extend_source.sql  0003_fts5_indexing.sql  0004_entity_merge.sql  0005_link_review_state.sql  0006_add_project_field.sql  0007_add_versioning.sql  0008_add_note_metadata.sql  0009_fix_fts5_indexes.sql  0010_markdown_first.sql  0011_add_semantic_dates.sql  0012_embeddings.sql  0013_add_ingestion_queue.sql  0014_standardize_block_order.sql
crates/pkm-storage/src/: blob_store.rs  db.rs  embeddings.rs  exporter.rs  file_ops.rs  lib.rs  migrations.rs  retriever.rs
crates/pkm-storage/src/repositories/: agent_actions.rs  entities.rs  links.rs  mod.rs  notes.rs  sources.rs  views.rs
crates/pkm-storage/tests/: migration_tests.rs
docs/: AGENT-BLOCKS.md  CANVAS_IMPLEMENTATION.md  CANVAS_VERIFICATION.md  HOVER_PREVIEWS_IMPLEMENTATION.md  HOVER_PREVIEWS_POLISH_SUMMARY.md  HOVER_PREVIEWS_VERIFICATION.md  POLISH_PASS_SUMMARY.md  rich-blocks-guide.md
docs/adr/: 0001-architecture-baseline.md  0002-crate-layout-and-ports.md  0003-agent-diff.md  0004-entity-merge-semantics.md  0005-ui-shell-choice.md  0006-sync-protocol-foundation.md  rich-block-types.md
docs/features/: CANVAS.md
src-web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-web/src/: App.tsx  index.css
src-web/src/components/: ArgumentTree.tsx  EdgeLegend.tsx  EntityLink.tsx  EntityMatrix.tsx  FogOfWar.tsx  GraphNode.tsx  KnowledgeReplay.tsx  MarkdownWithStatus.tsx  PreviewCard.tsx  ProgressiveGraph.tsx  ProvChain.tsx
src-web/src/types/: linkNetwork.ts
