[workspace]
resolver = "2"
members = [
    "crates/pkm-core",
    "crates/pkm-fs",
    "crates/pkm-search",
    "crates/pkm-ingestion",
    "crates/pkm-app",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
rust-version = "1.94"

[workspace.dependencies]
# Shared versions. Add a dependency here ONLY after answering the
# Dependency Policy questions in AGENTS.md. Keep this list small.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
sha2 = "0.10"
tauri = "2"
tauri-build = "2"
notify = "6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
url = "2"
chrono = { version = "0.4", features = ["serde"] }

# Internal crates referenced by path. Dependency direction is strict and
# acyclic.
pkm-core = { path = "crates/pkm-core" }
pkm-fs = { path = "crates/pkm-fs" }
pkm-search = { path = "crates/pkm-search" }
pkm-ingestion = { path = "crates/pkm-ingestion" }
