[package]
name = "pkm-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# A library crate that provides the service layer and command definitions.
# The Tauri app (built separately) links against this library.

[dependencies]
pkm-core = { workspace = true }
pkm-storage = { workspace = true }
pkm-search = { workspace = true }
pkm-agent = { workspace = true }
pkm-ingestion = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
