[package]
name = "pkm-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# A library crate that provides the service layer and command definitions.
# The binary target uses this library and Tauri to create the desktop app.

[dependencies]
pkm-core = { workspace = true }
pkm-fs = { workspace = true }
pkm-search = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
tauri = { workspace = true, optional = true }
notify = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
url = { version = "2" }
sha2 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { workspace = true }

[[bin]]
name = "pkm-app"
path = "src/bin/main.rs"
required-features = ["tauri"]

[features]
default = ["tauri"]
