[package]
name = "pkm-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
pkm-core = { workspace = true }
pkm-search = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
rayon = "1.8"

[dev-dependencies]
pkm-core = { workspace = true, features = ["fixtures"] }
tempfile = "3"
