[package]
name = "pkm-search"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# Pure query-parsing + ranking logic. Depends ONLY on pkm-core.

[dependencies]
pkm-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pkm-core = { workspace = true, features = ["fixtures"] }
