[package]
name = "pkm-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# Embedded local DB only. SQLite (bundled) is the accepted early choice
# (AGENTS.md Acceptable Shortcuts). No remote service, no ORM that hides SQL.
# This is the ONLY crate that may use rusqlite / write SQL. It implements the
# repository + retriever PORTS defined in pkm-core.

[dependencies]
pkm-core = { workspace = true }
pkm-search = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
pkm-core = { workspace = true, features = ["fixtures"] }
pkm-agent = { workspace = true }
tempfile = "3"
